the mobile version was finished

--- a/css/reset.css
+++ b/css/reset.css
@@ -74,3 +74,18 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+
+/* MY RESET */
+a {
+  text-decoration: none;
+}
+
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
