--- a/css/utilities/design-tokens/box-styles/border-radius.css
+++ b/css/utilities/design-tokens/box-styles/border-radius.css
@@ -18,6 +18,6 @@
 
 :root {
     --border-radius-m: clamp(0.63rem, calc(0.51rem + 0.47vw), 0.94rem); /* 10px --> 15px */
-    --border-radius-l: 1.75rem; 
-    --border-radius-xl: 1.96875rem;
+    --border-radius-l: 1.75rem; /* 28px */
+    --border-radius-xl: 1.96875rem; /* 31.5px */
 }   
