--- a/css/blocks/course.css
+++ b/css/blocks/course.css
@@ -1,4 +1,30 @@
+.course-checkout {
+    /* Box Styles */
+    background: var( --gradient-secondary);
+    border-radius: var(--border-radius-m);
+}
+
+.course-checkout h2 {
+    /* Font Styles */
+    font-size: var(--font-size-xl);
+    font-weight: var(--font-weight-extra-bold);
+    line-height: var(--line-height-l);
+    /* Color */
+    color: var(--color-neutral-white);
+    /* Whitespace */
+    /* padding: 24px 28px 32px; */
+    /* padding: 64px 32px 32px; */
+    padding-top: clamp(1.50rem, calc(0.62rem + 3.76vw), 4.00rem);  /* 24px → 64px */
+    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-bottom: clamp(2.00rem, calc(-0.33rem + 9.95vw), 8.63rem); /* 32px --> 138px */
+
+}
+
 .course {
+    /* Flexbox */
+    display: flex;
+    flex-direction: column;
     /* Position */
     position: relative;
     /* Box Styles */
@@ -45,6 +71,8 @@
     /* Micro-interaction */
     transition: all .2ms;
     cursor: pointer;
+    /* Flexbox */
+    margin-top: auto;
 }
 
 .course a:where(:hover, :active) {
@@ -54,5 +82,5 @@
 
 .course img {
     position: absolute;
-    top: -10%;
+    top: -7.5%;
 }
