--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -1,6 +1,4 @@
 footer {
-    /* Color */
-    background-color: var(--color-primary-main);
     /* Flexbox */
     display: flex;
     justify-content: space-between;
@@ -9,15 +7,19 @@ footer {
     /* padding: 36px 16px 36px 16px; */
     /* padding: 32px 165px 32px 165px; */
     padding-top: clamp(2.00rem, calc(2.34rem + -0.38vw), 2.25rem); /* 36px → 32px */
-    padding-right: clamp(1.00rem, calc(-2.28rem + 13.99vw), 10.31rem); /* 16px → 165px */
-    padding-left: clamp(1.00rem, calc(-2.28rem + 13.99vw), 10.31rem); /* 16px → 165px */
     padding-bottom: clamp(2.00rem, calc(2.34rem + -0.38vw), 2.25rem); /* 36px → 32px */
 }
 
 footer .logo {
     /* Font Styles */
-    font-size: 28px;
+    font-size: var(--font-size-xl-2); /* 28px --> 36px */
     font-weight: var(--font-weight-extra-bold);
     /* Color */
     color: var(--color-neutral-white);
+}
+
+.footer-bg {
+    /* Color */
+    width: 100%;
+    background-color: var(--color-primary-main);
 }
