--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -8,14 +8,11 @@ header {
     /* padding: 16px 16px 0 16px; */
     /* padding: 24px 165px 0 165px; */
     padding-top: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); /* 16px → 24px */
-    padding-right: clamp(1.00rem, calc(-2.28rem + 13.99vw), 10.31rem); /* 16px → 165px */
-    padding-left: clamp(1.00rem, calc(-2.28rem + 13.99vw), 10.31rem); /* 16px → 165px */
-    padding-bottom: 0;
 }
 
 header .logo {
     /* Font Styles */
-    font-size: 28px;
+    font-size: var(--font-size-xl-2); /* 28px --> 36px */
     font-weight: var(--font-weight-extra-bold);
     /* Color */
     color: var(--color-primary-main);
