--- a/css/utilities/design-tokens/colors/color.css
+++ b/css/utilities/design-tokens/colors/color.css
@@ -1,10 +1,16 @@
 /* COLOR */
 
 :root {
-    --color-primary-main: hsla(234, 53%, 16%, 1); /* #13183F */
-    --color-primary-accent: hsla(234, 25%, 52%, 1); /* #666CA3 */
-    --color-secondary-main: hsla(341, 92%, 62%, 1); /* #F74780 */ 
-    --color-secondary-accent: hsla(341, 100%, 83%, 1); /* #FFA7C3 */
-    --color-neutral-gray: hsla(233, 10%, 56%, 1); /* #83869A */
-    --color-neutral-white: hsla(0, 0%, 100%, 1); /* #FFFFFF */
+    /* #13183F */
+    --color-primary-main: hsla(234, 53%, 16%, 1); 
+    /* #666CA3 */
+    --color-primary-accent: hsla(234, 25%, 52%, 1); 
+    /* #F74780 */ 
+    --color-secondary-main: hsla(341, 92%, 62%, 1); 
+    /* #FFA7C3 */
+    --color-secondary-accent: hsla(341, 100%, 83%, 1); 
+    /* #83869A */
+    --color-neutral-gray: hsla(233, 10%, 56%, 1); 
+    /* #FFFFFF */
+    --color-neutral-white: hsla(0, 0%, 100%, 1); 
 }   
