--- a/css/blocks/buttons/button-secondary.css
+++ b/css/blocks/buttons/button-secondary.css
@@ -3,20 +3,29 @@
     font-size: var(--font-size-m-1);
     font-weight: var(--font-weight-bold);
     line-height: var(--line-height-m-1);
+
     /* Color */
     color: var(--color-neutral-white);
     background: var(--gradient-secondary);
+
     /* Box Styles */
     border-radius: var(--border-radius-xl);
+
     /* Micro-interactions */
     transition: all .2ms; 
+
     /* Whitespace */
     /* padding: 15px 38px; */
     /* padding: 19px 32px 16px; */
-    padding-top: clamp(0.94rem, calc(0.85rem + 0.38vw), 1.19rem); /*15px → 19px */
-    padding-right: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); /*38px → 32px */
-    padding-left: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); /*38px → 32px */
-    padding-bottom: clamp(0.94rem, calc(0.92rem + 0.09vw), 1.00rem); /*15px → 16px */
+
+    /*15px → 19px */
+    padding-top: clamp(0.94rem, calc(0.85rem + 0.38vw), 1.19rem); 
+    /*38px → 32px */
+    padding-right: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); 
+    /*38px → 32px */
+    padding-left: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); 
+    /*15px → 16px */
+    padding-bottom: clamp(0.94rem, calc(0.92rem + 0.09vw), 1.00rem); 
 }
 
 .button-secondary:where(:hover){
