--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -3,17 +3,24 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     /* Whitespace */
-    margin-bottom: clamp(2.38rem, calc(-0.57rem + 12.58vw), 10.75rem) /* 38px → 172px */ ;
+    /* 38px → 172px */
+    margin-bottom: clamp(2.38rem, calc(-0.57rem + 12.58vw), 10.75rem)  ;
+
     /* padding: 16px 16px 0 16px; */
     /* padding: 24px 165px 0 165px; */
-    padding-top: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); /* 16px → 24px */
+
+    /* 16px → 24px */
+    padding-top: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); 
 }
 
 header .logo {
     /* Font Styles */
-    font-size: var(--font-size-xl-2); /* 28px --> 36px */
+    /* 28px --> 36px */
+    font-size: var(--font-size-xl-2); 
     font-weight: var(--font-weight-extra-bold);
+    
     /* Color */
     color: var(--color-primary-main);
 }
