--- a/css/blocks/buttons/button-secondary.css
+++ b/css/blocks/buttons/button-secondary.css
@@ -1,4 +1,9 @@
 .button-secondary {
+    /* Layout */
+    /* 167px */
+    max-width: 10.4375rem;
+    width: 100%;
+
     /* Font Styles */
     font-size: var(--font-size-m-1);
     font-weight: var(--font-weight-bold);
@@ -20,10 +25,6 @@
 
     /*15px → 19px */
     padding-top: clamp(0.94rem, calc(0.85rem + 0.38vw), 1.19rem); 
-    /*38px → 32px */
-    padding-right: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); 
-    /*38px → 32px */
-    padding-left: clamp(2.00rem, calc(2.51rem + -0.56vw), 2.38rem); 
     /*15px → 16px */
     padding-bottom: clamp(0.94rem, calc(0.92rem + 0.09vw), 1.00rem); 
 }
