--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
- @import url(./css/reset.css);
- @import url(./css/compositions.css);
- @import url(./css/utilities.css);
- @import url(./css/blocks.css);
- @import url(./css/exceptions.css);
+@import url(./css/reset-and-my-default.css);
+@import url(./css/compositions.css);
+@import url(./css/utilities.css);
+@import url(./css/blocks.css);
+@import url(./css/exceptions.css);
 
  
