--- a/css/blocks/buttons/button-primary.css
+++ b/css/blocks/buttons/button-primary.css
@@ -1,39 +1,28 @@
 .button-primary {
-    /* Layout */
-    /* 140px → 167px */
-    max-width: clamp(8.75rem, calc(8.16rem + 2.54vw), 10.44rem);
+    /* LAYOUT */
+    z-index: 1;
+    max-width: clamp(8.75rem, calc(8.16rem + 2.54vw), 10.44rem); /* 140px → 167px */
     width: 100%;
-
-    /* Font Styles */
+    /* Padding */
+    /* padding: 9px 24px 11px; */
+    /* padding: 14px 32px; */
+    padding-top: clamp(0.56rem, calc(0.45rem + 0.47vw), 0.88rem); /* 9px → 14px */
+    padding-bottom: clamp(0.69rem, calc(0.62rem + 0.28vw), 0.88rem); /* 11px → 14px */
+    /* TEXT */
     font-size: var(--font-size-m-1);
     font-weight: var(--font-weight-bold);
     line-height: var(--line-height-m-2);
-
-    /* Color */
+    /* APPEARANCE */
     color: var(--color-neutral-white);
     background-color: var(--color-primary-main);
-
-    /* Box Styles */
-    border-radius: var(--border-radius-l);
-
-    /* Whitespace */
-    /* padding: 9px 24px 11px; */
-    /* padding: 14px 32px; */
-
-    /* 9px → 14px */
-    padding-top: clamp(0.56rem, calc(0.45rem + 0.47vw), 0.88rem); 
-    /* 11px → 14px */
-    padding-bottom: clamp(0.69rem, calc(0.62rem + 0.28vw), 0.88rem); 
-
-    /* Micro-interactions */
+    /* ANIMATION */
     transition: all .2ms;
-
-    /* Z-index */
-    z-index: 1;
+    /* OTHER */
+    border-radius: var(--border-radius-l);
 }
 
 .button-primary:where(:hover){
-    /* Color */
+    /* APPEARANCE */
     background-color: var(--color-primary-accent);
 }
 
