--- a/css/blocks/main-course-area/course-title.css
+++ b/css/blocks/main-course-area/course-title.css
@@ -1,21 +1,18 @@
 .course-title {
-    /* Box Styles */
+    /* APPEARANCE */
     background: var( --gradient-secondary);
+    /* OTHER */
     border-radius: var(--border-radius-m);
 }
 
 .course-title h2 {
-    /* Whitespace */
+    /* LAYOUT */
+    /* Padding */
     /* padding: 24px 28px 32px; */
     /* padding: 64px 32px 32px; */
-    
-    /* 24px → 64px */
-    padding-top: clamp(1.50rem, calc(0.62rem + 3.76vw), 4.00rem);  
-    /* 28px → 32px */
-    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); 
-    /* 28px → 32px */
-    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); 
-    /* 32px --> 138px */
-    padding-bottom: clamp(2.00rem, calc(-0.33rem + 9.95vw), 8.63rem); 
+    padding-top: clamp(1.50rem, calc(0.62rem + 3.76vw), 4.00rem);  /* 24px → 64px */
+    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-bottom: clamp(2.00rem, calc(-0.33rem + 9.95vw), 8.63rem); /* 32px --> 138px */
 
 }
