--- a/css/blocks/main-course-area/course.css
+++ b/css/blocks/main-course-area/course.css
@@ -1,55 +1,51 @@
 .course {
+    /* LAYOUT */
+    /* Position */
+    position: relative;
     /* Flexbox */
     display: flex;
     flex-direction: column;
-
-    /* Position */
-    position: relative;
-
-    /* Box Styles */
-    border-radius: var(--border-radius-m);
-    background-color: var(--color-neutral-white);
-    box-shadow: var(--box-shadow-step-1);
-
-    /* Whitespace */
+    /* Padding */
     /* padding: 56px 28px 32px; */
     /* padding: 64px 32px 40px; */
-
-    /* 56px → 64px */
-    padding-top: clamp(3.50rem, calc(3.32rem + 0.75vw), 4.00rem);   
-    /* 28px → 32px */
-    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); 
-    /* 28px → 32px */
-    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); 
-    /*32px → 40px */
-    padding-bottom: clamp(2.00rem, calc(1.82rem + 0.75vw), 2.50rem); 
+    padding-top: clamp(3.50rem, calc(3.32rem + 0.75vw), 4.00rem); /* 56px → 64px */
+    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-bottom: clamp(2.00rem, calc(1.82rem + 0.75vw), 2.50rem); /*32px → 40px */
+    /* APPEARANCE */
+    background-color: var(--color-neutral-white);
+    box-shadow: var(--box-shadow-step-1);
+    /* OTHER */
+    border-radius: var(--border-radius-m);
 }
 
 .course h3 {
-    /* Whitespace */
-    /* 16px → 24px */
-    margin-bottom: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); 
+    /* LAYOUT */
+    /* Margin */
+    margin-bottom: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); /* 16px → 24px */
 }
 
 .course p {
-    /* Whitespace */
+    /* LAYOUT */
+    /* Margin */
     margin-bottom: 1.5rem;
 }
 
 .course a:where(:link, :visited) {
-    /* Color */
-    color: var(--color-secondary-main);
-
+    /* LAYOUT */
     /* Flexbox */
     margin-top: auto;
+    /* APPEARANCE */
+    color: var(--color-secondary-main);
 }
 
 .course a:where(:hover, :active) {
-    /* Color */
+    /* APPEARANCE */
     color: hsla(341, 92%, 62%, .7);
 }
 
 .course img {
+    /* LAYOUT */
     /* Position */
     position: absolute;
     top: -7.5%;
