--- a/css/blocks/header/hero.css
+++ b/css/blocks/header/hero.css
@@ -7,10 +7,8 @@
     align-items: center;
     gap: clamp(2.88rem, calc(0.32rem + 10.89vw), 10.13rem); /* 46px → 162px */
     /* Margin */
-    margin-bottom: 66px; /* for only this demo */
-    /* Padding */
-    /* padding: 0 16px 0 16px; */
-    /* padding: 0 165px 0 165px; */
+    margin-bottom: 46.21px + 23px; 
+    /* for only this demo */
 }
 
 .hero-content {
@@ -32,18 +30,23 @@
 }
 
 .hero-img {
-    /* background-color: red; */
+    background-color: red;
     /* LAYOUT */
+    width: clamp(21.44rem, calc(18.93rem + 10.70vw), 28.56rem); 
+    /* 343px → 457px; */
+    height: clamp(18.81rem, calc(17.54rem + 5.45vw), 22.44rem); 
+    /* 301px → 359px */
     /* Position */
-    width: clamp(21.44rem, calc(18.93rem + 10.70vw), 28.56rem); /* 343px → 457px; */
-    height: clamp(18.81rem, calc(17.54rem + 5.45vw), 22.44rem); /* 301px → 359px */
+    /* position: relative;
+    width: 100px;
+    height: 563px; */
 }
 
 .hero-img img {
     /* LAYOUT */
-    max-width: initial;
+    /* max-width: initial; */
     /* Position */
-    position: absolute;
-    right: -200px;
-    top: -100px;
+    /* position: absolute;
+    left: 0px;
+    bottom: 0px; */
 }
