--- a/css/blocks/header/nav.css
+++ b/css/blocks/header/nav.css
@@ -1,4 +1,4 @@
-header {
+nav {
     /* LAYOUT */
     /* Flexbox */
     display: flex;
@@ -12,7 +12,7 @@ header {
     padding-top: clamp(1.00rem, calc(0.82rem + 0.75vw), 1.50rem); /* 16px → 24px */
 }
 
-header .logo {
+nav .logo {
     /* TEXT */
     font-size: var(--font-size-xl-2); /* 28px --> 36px */
     font-weight: var(--font-weight-extra-bold);
