--- a/css/blocks/header/hero.css
+++ b/css/blocks/header/hero.css
@@ -6,9 +6,6 @@
     justify-content: space-between;
     align-items: center;
     gap: clamp(2.88rem, calc(0.32rem + 10.89vw), 10.13rem); /* 46px → 162px */
-    /* Margin */
-    margin-bottom: 46.21px + 23px; 
-    /* for only this demo */
 }
 
 .hero-content {
@@ -34,19 +31,9 @@
     /* LAYOUT */
     width: clamp(21.44rem, calc(18.93rem + 10.70vw), 28.56rem); 
     /* 343px → 457px; */
-    height: clamp(18.81rem, calc(17.54rem + 5.45vw), 22.44rem); 
-    /* 301px → 359px */
-    /* Position */
-    /* position: relative;
-    width: 100px;
-    height: 563px; */
+    height: clamp(18.81rem, calc(17.54rem + 5.45vw), 22.44rem);     
 }
 
-.hero-img img {
-    /* LAYOUT */
-    /* max-width: initial; */
-    /* Position */
-    /* position: absolute;
-    left: 0px;
-    bottom: 0px; */
+.clip-path {
+    clip-path: circle(40%);
 }
