--- a/css/blocks/main-course-area/course.css
+++ b/css/blocks/main-course-area/course.css
@@ -9,8 +9,7 @@
     /* padding: 56px 28px 32px; */
     /* padding: 64px 32px 40px; */
     padding-top: clamp(3.50rem, calc(3.32rem + 0.75vw), 4.00rem); /* 56px → 64px */
-    padding-right: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
-    padding-left: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
+    padding-inline: clamp(1.75rem, calc(1.66rem + 0.38vw), 2.00rem); /* 28px → 32px */
     padding-bottom: clamp(2.00rem, calc(1.82rem + 0.75vw), 2.50rem); /*32px → 40px */
     /* APPEARANCE */
     background-color: var(--color-neutral-white);
